# rs-example-self-update

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  main.rs  zipsign.pub
.github/workflows/: release.yml
doc/: 01_build.md  02_signing.md  03_release.md  04_dependencies.md  README.md
spec/: 01_requirements.md
spec/reviews/: review_0.2.6.md
src/: main.rs
tools/: release.sh
