[package]
name = "rs-example-self-update"
version = "0.2.4"
edition = "2021"

[dependencies]
# The core library for updating
self_update = { version = "0.42", features = ["archive-tar", "archive-zip", "compression-zip-deflate", "compression-flate2", "signatures"] }
# For verifying file integrity manually if needed, or just for fallback logic
anyhow = "1.0"
zipsign-api = "0.1"